--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -21,11 +21,18 @@ color: white;
 .nav-link:hover {
 color: rgba(255,255,255,0.5);
 }
+
 nav .nav-link {
 display: block;
 }
 .navbar-brand {
 padding: 1rem;
+}
+.brandimg {
+  background-image: url("../images/DomaSoftware.svg");
+  background-repeat: no-repeat;
+  height: 10vh;
+  width: 20vw;
 }
 .menu {
   width: 15vw;
@@ -44,4 +51,12 @@ padding: 0.8rem;
 }
 .popis {
   margin-bottom: 5vh;
+}
+@media screen and (max-width: 1824px) {
+ .brandimg {
+   background-image: url("../images/DomaSoftware.svg");
+   background-repeat: no-repeat;
+   height: 7vh;
+   width: 14vw;
+ }
 }
