--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans');
+::-webkit-scrollbar {
+    display: none;
+}
 body {
 background-color: #4F575E;
+
 }
 * {
 margin: 0;
@@ -14,9 +18,10 @@ z-index: 9999;
 .sidenav {
 background-color: #4F575E;
 width: 15vw;
-height: 100%;
+height: 100vh;
 overflow-x: hidden;
-position: fixed;
+overflow-y: hidden;
+position: absolute;
 top: 0;
 left: 0;
 margin-top: 65px;
@@ -30,6 +35,7 @@ color: rgba(255,255,255,0.5);
 
 .sidenav .sidenav-link {
 display: block;
+border: 1px solid rgba(255,255,255,0.1);
 }
 .brandimg {
   background-image: url("../images/DomaSoftware.svg");
@@ -45,7 +51,10 @@ display: block;
 padding: 2rem;
 margin-left: 15vw;
 height: 100vh;
-background-color: #C6C5C5;
+background-color: #617B94;
+border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.allSections {
 }
 .tabulka, tr, td {
 margin: 0 auto;
