--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -16,7 +16,8 @@ font-family: 'Work Sans', sans-serif;
 z-index: 9999;
 }
 .sidenav {
-background-color: #4F575E;
+z-index: 2;
+background-color: #e1e8fo;
 width: 15vw;
 height: 100vh;
 overflow-x: hidden;
@@ -48,10 +49,11 @@ border: 1px solid rgba(255,255,255,0.1);
   height: 100%;
 }
 .sekce {
+z-index: 1;
 padding: 2rem;
 margin-left: 15vw;
 height: auto;
-background-color: #617B94;
+background-color: #a5aaaf;
 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 .allSections {
