--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -3,7 +3,7 @@
     display: none;
 }
 body {
-background-color: #4F575E;
+background-color: #d6d8d9;
 
 }
 * {
@@ -15,9 +15,18 @@ font-family: 'Work Sans', sans-serif;
 .navbar {
 z-index: 9999;
 }
+.menu {
+z-index: 2;
+background-color: #4F575E;
+width: 15vw;
+height: 100vh;
+position: absolute;
+top: 0;
+left: 0;
+}
 .sidenav {
 z-index: 2;
-background-color: #e1e8fo;
+background-color: #4F575E;
 width: 15vw;
 height: 100vh;
 overflow-x: hidden;
@@ -55,6 +64,7 @@ margin-left: 15vw;
 height: auto;
 background-color: #a5aaaf;
 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+box-shadow: inset 0 0 30px 5px lightgray;
 }
 .allSections {
 }
