--- a/frontend/public/css/particles.css
+++ b/frontend/public/css/particles.css
@@ -10,9 +10,9 @@ canvas {
 #particles-js {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 92%;
   background-color: #292e48;
-  background-image: url("../images/DomaSoftware.svg");
+  background-image: url("../images/DomaSoftware157878.svg");
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: 50% 50%;
