--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+
+
+* {
+font-family: 'Open Sans', sans-serif;
+}
 #line {
 border-bottom: 3px solid #157878;
 }
-#navigatorIndex {
+#navigatorIndex, #navigator {
   background-color: #292e48;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: 'Open Sans', sans-serif;
 }
 #headyIndex {
 max-height: 70vh;
