--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -15,7 +15,7 @@ box-shadow: 0px 0px 50px 2px gray;
 .bodyDiv {
 background-color: #DBDBDB;
 }
-.navbarDifferent {
+#navigator {
 width: 1200px;
 }
 .navObal {
