--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -18,9 +18,7 @@ background-color: #DBDBDB;
 min-height: 100vh;
 }
 .onasSekce {
-
-background-image: url("../images/bckgrndT2.png");
-background-size: contain;
+background-color: #ededed;
 }
 .svgPerson:hover {
   opacity: 0.9;
@@ -31,16 +29,12 @@ background-size: contain;
   width: 250px;
 }
 .card-img {
-border: 1px solid #bbbbbb;
 height: 230px;
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
 }
 .customCards, .conabImg {
-background-color: #fff;
-border: 1px solid rgba(0,0,0,.125);
-border-radius: 3px;
 color: black;
 }
 footer {
