--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -36,6 +36,7 @@ background-repeat: no-repeat;
 }
 .customCards, .conabImg {
 color: black;
+font-size: 20px;
 }
 footer {
 background-color: #292e48;
