--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -6,7 +6,10 @@
 overflow-x: hidden;
 }
 .articles {
-  border: 1px solid black;
+  border: 1px solid rgba(0,0,0,.25);
+  border-radius: 15px;
+  background-color: #292e48;
+  color: #fff;
 }
 .mainobal {
 width: 1200px;
