--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -17,6 +17,10 @@ margin-bottom: 5px;
 background-color: #EDEDED;
 box-shadow: 0px 0px 50px 2px gray;
 }
+.articleImg {
+height: 200px;
+width: 200px;
+}
 .bodyDiv {
 background-color: #DBDBDB;
 }
