img and safety changes

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -30,8 +30,8 @@ background-color: #EDEDED;
 box-shadow: 0px 0px 50px 2px gray;
 }
 .articleImg {
-height: 200px;
-width: 200px;
+height: 20vh;
+width: 20vh;
 }
 .bodyDiv {
 background-color: #DBDBDB;
