--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -58,7 +58,7 @@ margin-left: 19vw;
 margin-right: 2vw;
 min-height: 100vh;
 height: auto;
-background-color: #77C9D4;
+background-color: #81ecec;
 color: #000;
 }
 .custom-file {
