--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -58,7 +58,7 @@ margin-left: 22vw;
 margin-right: 5vw;
 min-height: 100vh;
 height: auto;
-background-color: #81ecec;
+background-color: #4ECDC4;
 color: #000;
 }
 .custom-file {
