--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -15,21 +15,21 @@ font-family: 'Work Sans', sans-serif;
 }
 .navbar {
 z-index: 3;
+width: 90vw;
 }
 .menu {
 z-index: 2;
 background-color: #323A45;
-width: 13vw;
+width: 10vw;
 position: absolute;
 top: 0;
 left: 0;
-margin-top: 60px;
 }
 .sidenav {
 z-index: 2;
 background-color: #323A45;
-width: 13vw;
-height: 100%;
+width: 10vw;
+height: 150vh;
 position: absolute;
 top: 0;
 left: 0;
@@ -54,7 +54,7 @@ border: 1px solid rgba(255,255,255,0.1);
 .sekce {
 z-index: 1;
 padding: 2rem;
-margin-left: 22vw;
+margin-left: 15vw;
 margin-right: 5vw;
 min-height: 100vh;
 height: auto;
@@ -64,7 +64,6 @@ color: #000;
 .custom-file {
   display: none;
 }
-
 .tabulka, tr, td {
 margin: 0 auto;
 border: 1px solid black;
@@ -88,9 +87,4 @@ padding: 0.8rem;
  }
 }
 @media screen and (max-width:768px) {
-  /*
-  .sidenav-link {
-    visibility: hidden;
-  }
-  */
 }
