--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -57,8 +57,8 @@ z-index: 1;
 padding: 2rem;
 margin-left: 15vw;
 margin-right: 5vw;
-min-height: 100vh;
-height: auto;
+height: 85vh;
+overflow-y: scroll;
 background-color: #65c6bb;
 color: #000;
 }
