--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -21,7 +21,7 @@ width: 90vw;
 z-index: 2;
 background-color: #323A45;
 width: 10vw;
-height: 150vh;
+height: 100vh;
 position: absolute;
 top: 0;
 left: 0;
@@ -30,7 +30,7 @@ left: 0;
 z-index: 2;
 background-color: #323A45;
 width: 10vw;
-height: 150vh;
+height: 100vh;
 position: absolute;
 top: 0;
 left: 0;
@@ -57,8 +57,8 @@ z-index: 1;
 padding: 2rem;
 margin-left: 15vw;
 margin-right: 5vw;
-height: 85vh;
-overflow-y: scroll;
+height: 89vh;
+overflow: auto;
 background-color: #65c6bb;
 color: #000;
 }
