--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -3,9 +3,10 @@
     display: none;
 }
 body {
-  background: #0F2027;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #485563;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 * {
 margin: 0;
@@ -41,7 +42,6 @@ color: white;
 .sidenav-link:hover {
 color: rgba(255,255,255,0.5);
 }
-
 .sidenav .sidenav-link {
 display: block;
 border: 1px solid rgba(255,255,255,0.1);
@@ -59,6 +59,7 @@ margin-left: 15vw;
 margin-right: 5vw;
 height: 89vh;
 overflow: auto;
+border-radius: 15px;
 background-color: #65c6bb;
 color: #000;
 }
