--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -13,6 +13,7 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 font-family: 'Work Sans', sans-serif;
+font-size:13px;
 }
 .navbar {
 z-index: 3;
@@ -30,11 +31,13 @@ left: 0;
 .sidenav {
 z-index: 2;
 background-color: #323A45;
-width: 10vw;
 height: 100vh;
 position: absolute;
 top: 0;
 left: 0;
+}
+.sideMenuDiv, .log-out {
+  width: 10vw;
 }
 .sidenav-link{
 color: white;
