--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -86,7 +86,7 @@ padding: 0.8rem;
   padding: 1rem;
 }
 .popupNav {
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(52,57,64,0.8);
   width: 100%;
   height: 0%;
   position: fixed;
@@ -109,7 +109,10 @@ padding: 0.8rem;
   height: 100px;
   width: 100px;
 }
-.popupNav a:hover, .popupNav:focus {
+.closeBtn:hover {
+  color: #f1f1f1;
+}
+.popNavLink:hover, .popNavLink:focus {
   color: #f1f1f1;
   background-color: gray;
 }
