--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -4,6 +4,7 @@ body {
   background: #485563;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 * {
 margin: 0;
@@ -59,7 +60,7 @@ z-index: 1;
 padding: 2rem;
 margin-left: 2vw;
 margin-right: 2vw;
-height: 90vh;
+height: 85vh;
 overflow: auto;
 border-radius: 10px;
 background-color: #65c6bb;
@@ -125,6 +126,9 @@ padding: 0.8rem;
   top: 25px;
   right: 45px;
   font-size: 30px;
+}
+.dropdown-menu a {
+color: #fff;
 }
 @media screen and (max-width: 1824px) {
  .brandimg {
