--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -35,6 +35,6 @@ margin: 10px;
 display: block;
 border-bottom: 1px solid rgba(255,255,255,0.75);
 padding: 1.5rem;
-background-color: #6b6b6b;
+background-color: #3d3d3d;
 border: 1px solid #fff;
 }
