--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -130,6 +130,45 @@ padding: 0.8rem;
 .dropdown-menu a {
 color: #fff;
 }
+.sideAutorNav {
+  height: 100%;
+   width: 0;
+   position: fixed;
+   z-index: 4;
+   top: 0;
+   right: 0;
+   overflow-x: hidden;
+   padding-top: 4rem;
+   transition: 0.5s;
+}
+.sideAutorNav a:not(.logA) {
+  padding: 8px 8px 8px 32px;
+text-decoration: none;
+font-size: 25px;
+color: #818181;
+display: block;
+transition: 0.3s;
+}
+.logA {
+  padding: 8px 8px 8px 32px;
+text-decoration: none;
+  color:lightgray;
+  display: block;
+  margin: 0 auto;
+  transition: 0.3s;
+}
+
+.sideAutorNav a:hover {
+  color: #f1f1f1;
+}
+
+.sideAutorNav .closebtny {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
 
 @media screen and (max-width: 1824px) {
  .brandimg {
@@ -143,4 +182,6 @@ color: #fff;
 .usrFoot {
   display: none;
 }
+.sideAutorNav {padding-top: 15px;}
+.sideAutorNav a {font-size: 18px;}
 }
