--- a/cms/public/css/style.css
+++ b/cms/public/css/style.css
@@ -63,7 +63,7 @@ margin-right: 2vw;
 height: 87vh;
 overflow: auto;
 border-radius: 10px;
-background-color: #65c6bb;
+background: #6C747C;
 color: #000;
 }
 .custom-file {
